WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
149400
Fix the !ENABLE(TEMPLATE_ELEMENT) build after
r189945
https://bugs.webkit.org/show_bug.cgi?id=149400
Summary
Fix the !ENABLE(TEMPLATE_ELEMENT) build after r189945
Csaba Osztrogonác
Reported
2015-09-21 03:33:53 PDT
https://trac.webkit.org/changeset/189945/trunk/Source/WebCore/xml/parser/XMLDocumentParserLibxml2.cpp
updated only the ENABLE(TEMPLATE_ELEMENT) case, but we should update the else case too. build log: ----------- ../../Source/WebCore/xml/parser/XMLDocumentParserLibxml2.cpp: In member function 'void WebCore::XMLDocumentParser::startElementNs(const xmlChar*, const xmlChar*, const xmlChar*, int, const xmlChar**, int, int, const xmlChar**)': ../../Source/WebCore/xml/parser/XMLDocumentParserLibxml2.cpp:856:37: error: no matching function for call to 'WebCore::XMLDocumentParser::pushCurrentNode(WebCore::Element&)' ../../Source/WebCore/xml/parser/XMLDocumentParserLibxml2.cpp:856:37: note: candidate is: In file included from ../../Source/WebCore/xml/parser/XMLDocumentParserLibxml2.cpp:29:0: ../../Source/WebCore/xml/parser/XMLDocumentParser.h:143:14: note: void WebCore::XMLDocumentParser::pushCurrentNode(WebCore::ContainerNode*) ../../Source/WebCore/xml/parser/XMLDocumentParser.h:143:14: note: no known conversion for argument 1 from 'WebCore::Element' to 'WebCore::ContainerNode*'
Attachments
Patch
(1.33 KB, patch)
2015-09-21 03:34 PDT
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2015-09-21 03:34:59 PDT
Created
attachment 261644
[details]
Patch
WebKit Commit Bot
Comment 2
2015-09-21 12:16:14 PDT
Comment on
attachment 261644
[details]
Patch Clearing flags on attachment: 261644 Committed
r190068
: <
http://trac.webkit.org/changeset/190068
>
WebKit Commit Bot
Comment 3
2015-09-21 12:16:18 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug