Fix the !ENABLE(TEMPLATE_ELEMENT) build after r189945 https://bugs.webkit.org/show_bug.cgi?id=149400

Reviewed by Darin Adler.

* xml/parser/XMLDocumentParserLibxml2.cpp:
(WebCore::XMLDocumentParser::startElementNs):


Canonical link: https://commits.webkit.org/167500@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@190068 268f45cc-cd09-0410-ab3c-d52691b4dbfc